--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FormAdopcion"
-            android:theme="@style/AppTheme.TemaPopup"></activity>
+        <activity android:name=".AnimalList"></activity>
+        <activity
+            android:name=".FormAdopcion"
+            android:theme="@style/AppTheme.TemaPopup" />
         <activity android:name=".FormularioAddAnimal" />
         <activity android:name=".MainActivity">
             <intent-filter>
