--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AnimalList"></activity>
+        <activity android:name=".AnimalPorAdoptar"></activity>
+        <activity android:name=".AnimalList" />
         <activity
             android:name=".FormAdopcion"
             android:theme="@style/AppTheme.TemaPopup" />
