--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AnimalPorAdoptar"></activity>
+        <activity android:name=".RedesSociales"></activity>
+        <activity
+            android:name=".ListSolicitudAdopcion"
+            android:theme="@style/AppTheme.TemaPopup" />
+        <activity android:name=".AnimalPorAdoptar" />
         <activity android:name=".AnimalList" />
         <activity
             android:name=".FormAdopcion"
